# SlidingDFT

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: SlidingDFTConfig.cmake.in
include/SlidingDFT/: allocator.hpp  c_api.h  sliding_dft.hpp  types.hpp
python/: README.md
python/sliding_dft/: __init__.py  _core.py
src/: c_api.cpp  example.cpp  sliding_dft.cpp
